Fix preloading assets on mobile.

--- a/src/components/stat-container/big-progressbar/big-progressbar.css
+++ b/src/components/stat-container/big-progressbar/big-progressbar.css
@@ -49,10 +49,7 @@
     display: block;
     height: 100%;
     width: 0%;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border-radius: 14px;
     background-color: #c67435;
     box-shadow: inset 0 2px 1px rgba(255, 255, 255, 0.2),
         inset 0 -2px 1px rgba(135, 50, 4, 0.5);
@@ -80,10 +77,7 @@
     z-index: 1;
     background-size: 50px 50px;
     animation: move 2s linear infinite;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border-radius: 14px;
     opacity: 0.5;
     overflow: hidden;
 }
@@ -107,6 +101,15 @@
         font-size: 1.2em;
         font-weight: initial;
     }
+
+    .big-progressbar {
+        border-radius: 15px;
+    }
+
+    .big-progressbar > .progress,
+    .big-progressbar > .progress:after {
+        border-radius: 14px;
+    }
 }
 
 @media screen and (max-width: 992px) {
@@ -118,6 +121,15 @@
     .big-progressbar .label {
         font-size: 1em;
         font-weight: initial;
+    }
+
+    .big-progressbar {
+        border-radius: 12px;
+    }
+
+    .big-progressbar > .progress,
+    .big-progressbar > .progress:after {
+        border-radius: 11px;
     }
 }
 
@@ -131,6 +143,15 @@
         font-size: 0.8em;
         font-weight: initial;
     }
+
+    .big-progressbar {
+        border-radius: 10px;
+    }
+
+    .big-progressbar > .progress,
+    .big-progressbar > .progress:after {
+        border-radius: 9px;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -143,6 +164,15 @@
         font-size: 0.6em;
         font-weight: initial;
     }
+
+    .big-progressbar {
+        border-radius: 8px;
+    }
+
+    .big-progressbar > .progress,
+    .big-progressbar > .progress:after {
+        border-radius: 7px;
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -154,5 +184,14 @@
     .big-progressbar .label {
         font-size: 0.4em;
         font-weight: initial;
+    }
+
+    .big-progressbar {
+        border-radius: 8px;
+    }
+
+    .big-progressbar > .progress,
+    .big-progressbar > .progress:after {
+        border-radius: 7px;
     }
 }
